--- a/251_300.md
+++ b/251_300.md
@@ -23,7 +23,7 @@ B. Create a NAT gateway, and place it in a public subnet. Configure the private 
 -   [ ] The private subnet's route table directs outbound traffic to the NAT gateway.
 -   [ ] This solution enables the EC2 instance to download updates securely.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. An internet gateway allows public subnets to access the internet, but not private subnets.
 -   [ ] C. A NAT instance requires more management than a NAT gateway. Placing it in the same subnet is incorrect.
@@ -57,7 +57,7 @@ A. Amazon Elastic File System (Amazon EFS)
 -   [ ] It supports concurrent access from multiple EC2 instances.
 -   [ ] EFS is designed with built-in redundancy and scalability.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Amazon EBS is block storage and can only be attached to a single EC2 instance at a time.
 -   [ ] C. Amazon S3 Glacier Deep Archive is for long-term archival, not concurrent access.
@@ -96,7 +96,7 @@ C. Deleting Amazon EC2 instances
 -   [ ] Policy 2 denies "ds:Delete\*" actions.
 -   [ ] Deny statements override allow statements, but the cloud engineer is still allowed to delete EC2 instances.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. The engineer can't delete IAM users because it's not in Policy 1.
 -   [ ] B. "ds:Delete\*" denies deleting directories.
@@ -130,7 +130,7 @@ B. Create security group rules using the security group ID as the source or dest
 -   [ ] Security groups can reference other security groups, applying least privilege.
 -   [ ] This allows traffic only from instances in the specified security group.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Instance IDs are dynamic and not practical for security group rules.
 -   [ ] C. VPC CIDR blocks are too broad and violate least privilege.
@@ -163,7 +163,7 @@ D. Store the order in the database. Send a message that includes the order numbe
 -   [ ] SQS FIFO queues ensure messages are processed exactly once and in order.
 -   [ ] This prevents duplicate order creation by processing each order only once.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Kinesis Data Firehose is for streaming data to destinations, not for ensuring single processing.
 -   [ ] B. CloudTrail is for API call logging, not for workflow management.
@@ -201,7 +201,7 @@ D. Enable MFA Delete on the bucket.
 
 -   [ ] MFA Delete requires multi-factor authentication for deletion, preventing accidental deletes.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Read-only ACL prevents users from modifying and uploading documents.
 -   [ ] C. IAM policies control access but do not prevent accidental deletion.
@@ -235,7 +235,7 @@ A. Use an Amazon CloudWatch metric stream to send the EC2 Auto Scaling status da
 -   [ ] Kinesis Data Firehose efficiently delivers data to S3.
 -   [ ] This is a serverless solution.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Launching an EMR cluster is not serverless and adds overhead.
 -   [ ] C. Lambda on a schedule is not real-time.
@@ -269,7 +269,7 @@ D. Create an AWS Glue extract, transform, and load (ETL) job to convert the .csv
 -   [ ] Lambda functions can trigger the ETL job on S3 PUT events.
 -   [ ] This solution is efficient and managed.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Lambda functions may have limitations with large files and complex transformations.
 -   [ ] B. Spark jobs require more setup and management.
@@ -303,7 +303,7 @@ A. Create a backup vault in AWS Backup to retain RDS backups. Create a new backu
 -   [ ] Backup plans automate backup schedules and retention.
 -   [ ] This solution meets the requirements for consistent and restorable backups.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. RDS snapshots are point-in-time and not as flexible as AWS Backup. DLM is for EBS volumes, not RDS.
 -   [ ] C. CloudWatch Logs are for log data, not database backups.
@@ -336,7 +336,7 @@ D. Join the file system to the Active Directory to restrict access.
 -   [ ] Joining the file system to the Active Directory preserves existing permissions.
 -   [ ] This allows on-premises Active Directory groups to control access.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AD Connector connects to AD but doesn't directly enforce permissions. Mapping to IAM groups is incorrect.
 -   [ ] B. Tags are for metadata, not access control. Mapping to IAM groups is incorrect.
@@ -375,7 +375,7 @@ C. Configure a Lambda@Edge function to send specific objects to users based on t
 
 -   [ ] Lambda@Edge allows customization of content delivery based on headers like User-Agent.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Network Load Balancers do not support host headers.
 -   [ ] D. Global Accelerator is for performance, not content versioning. NLBs don't support host-based routing.
@@ -411,7 +411,7 @@ A. Create a peering connection between the VPCs. Add a route table entry for the
 -   [ ] Route table entries enable traffic flow.
 -   [ ] Security groups control access to ElastiCache.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Transit VPC is more complex and expensive for only two VPCs.
 -   [ ] C. Security groups of ElastiCache, not peering, control access to ElastiCache.
@@ -450,7 +450,7 @@ D. Deploy an Amazon Elastic Container Service (Amazon ECS) service with a Fargat
 -   [ ] Fargate removes the need to manage underlying infrastructure.
 -   [ ] Specifying at least two tasks ensures high availability.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Managing the Kubernetes control plane adds operational overhead.
 -   [ ] C. EC2 launch type requires managing EC2 instances.
@@ -483,7 +483,7 @@ D. Create an Application Load Balancer (ALB) with a health check in front of the
 -   [ ] ALB health checks ensure traffic is routed only to healthy instances.
 -   [ ] Route 53 directs traffic to the ALB.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Simple routing does not provide health checks.
 -   [ ] B. Failover routing is for disaster recovery, not load balancing.
@@ -517,7 +517,7 @@ C. Configure a public Application Load Balancer (ALB) with multiple redundant Am
 -   [ ] ALB distributes traffic to EC2 instances.
 -   [ ] Private subnets secure EC2 instances.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. EC2 instances in public subnets are less secure.
 -   [ ] B. CloudFront needs a public endpoint like an ALB, not EC2 instances directly. EC2 instances in private subnets can't be directly accessed from the internet.
@@ -550,7 +550,7 @@ A. Configure an accelerator in AWS Global Accelerator. Add a listener for the po
 -   [ ] Global Accelerator improves performance by routing traffic to the nearest healthy endpoint.
 -   [ ] It monitors application health and redirects traffic away from unhealthy endpoints.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. CloudFront is for caching content, not for real-time traffic routing based on health.
 -   [ ] C. CloudFront with S3 is for static content, not dynamic application traffic.
@@ -584,7 +584,7 @@ D. Create an Amazon Kinesis Data Firehose delivery stream to store the data in A
 -   [ ] Kinesis Data Analytics can analyze data in near-real time.
 -   [ ] This is a managed solution with minimal overhead.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Kinesis Data Streams and Lambda add complexity.
 -   [ ] B. EMR clusters add operational overhead.
@@ -617,7 +617,7 @@ A. Use Amazon ElastiCache in front of the database.
 -   [ ] ElastiCache can cache frequently read data, reducing database load.
 -   [ ] This improves read performance with minimal changes to the application.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. RDS Proxy is for connection management, not caching.
 -   [ ] C. Migrating to Lambda requires significant application changes.
@@ -650,7 +650,7 @@ C. Create a read replica of the primary database and have the business analysts 
 -   [ ] Read replicas offload read queries from the primary database.
 -   [ ] This improves performance with minimal application changes.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. DynamoDB is not suitable for complex SQL queries.
 -   [ ] B. ElastiCache is for caching, not for running analytical queries.
@@ -682,7 +682,7 @@ A. Use client-side encryption to encrypt the data that is being uploaded to the 
 
 -   [ ] Client-side encryption ensures data is encrypted before transit and at rest.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Server-side encryption encrypts data at rest but not before transit.
 -   [ ] C. Bucket policies enforce encryption but don't encrypt data before transit.
@@ -713,7 +713,7 @@ Why these are the correct answers:
 
 C. Configure scheduled scaling to scale up to the desired compute level.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Increasing the minimum capacity would ensure that the desired number of instances are always running, not just during the batch job. This is not cost-effective.
 - [ ] B. Increasing the maximum capacity would not solve the problem of the delay in scaling up. It only sets a ceiling on how many instances can run.
@@ -740,7 +740,7 @@ Why these are the correct answers:
 
 B. Configure an Amazon CloudFront distribution with the ALB as the origin. Set the cache behavior settings to cache based on the Accept-Language request header.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Replacing the architecture with S3 would only work for static content, not a dynamic website.
 - [ ] C. API Gateway is not designed for caching web content like CloudFront.
@@ -767,7 +767,7 @@ Why these are the correct answers:
 
 B. Use an Amazon Aurora global database with a warm standby deployment.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Pilot light has a higher RTO because you need to scale up resources in the DR region.
 - [ ] C. RDS Multi-AZ is within a single region, not for cross-region DR.
@@ -794,7 +794,7 @@ Why these are the correct answers:
 
 B. Create Amazon Machine Images (AMIs) to back up the EC2 instances. Copy the AMIs to a secondary AWS Region. Automate infrastructure deployment in the secondary Region by using AWS CloudFormation.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Using Lambda and custom scripts adds operational overhead compared to CloudFormation.
 - [ ] C. Keeping EC2 instances active in the DR region at all times is costly.
@@ -821,7 +821,7 @@ Why these are the correct answers:
 
 C. Implement a target tracking action triggered at a lower CPU threshold, and decrease the cooldown period.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Scheduled actions don't respond to actual demand, just time.
 - [ ] B. Step scaling is less smooth than target tracking.
@@ -851,7 +851,7 @@ Why these are the correct answers:
 A. Configure storage Auto Scaling on the RDS for Oracle instance.
 D. Configure the Auto Scaling group to use the average CPU as the scaling metric.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Migrating to Aurora is a big change, not just scaling.
 - [ ] C. An alarm notifies, but Auto Scaling acts automatically.
@@ -878,7 +878,7 @@ Why these are the correct answers:
 
 D. Use Amazon S3 for storing the video content. Move the files temporarily over to an Amazon Elastic Block Store (Amazon EBS) volume attached to the server for processing.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Storage Gateway is for on-premises integration, not cost-effective here.
 - [ ] B. Storage Gateway volumes are block storage, not file storage.
@@ -908,7 +908,7 @@ Why these are the correct answers:
 B. Use Amazon DynamoDB to store the employee data in hierarchies. Export the data to Amazon S3 every month.
 E. Configure Amazon Macie for the AWS account. Integrate Macie with Amazon EventBridge to send monthly notifications through an Amazon Simple Notification Service (Amazon SNS) subscription.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Redshift is for analytics, not low-latency queries.
 - [ ] C. Lambda is not needed to send email notifications.
@@ -935,7 +935,7 @@ Why these are the correct answers:
 
 A. Create an AWS Backup plan to back up the DynamoDB table on the first day of each month. Specify a lifecycle policy that transitions the backup to cold storage after 6 months. Set the retention period for each backup to 7 years.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. DynamoDB backups are not directly transitioned to S3 Glacier.
 - [ ] C. Using scripts adds complexity compared to AWS Backup.
@@ -963,7 +963,7 @@ Why these are the correct answers:
 
 B. Use standard SQL queries in Amazon Athena to analyze the CloudFront logs in the S3 bucket. Visualize the results with Amazon QuickSight.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. AWS Glue is primarily a data integration service, not a visualization tool.
 - [ ] C. Amazon DynamoDB is a NoSQL database, not designed for SQL queries on S3 logs.
@@ -990,7 +990,7 @@ Why these are the correct answers:
 
 A. Enable a Multi-AZ deployment for the DB instance.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Auto Scaling doesn't provide RPO of less than 1 second.
 - [ ] C. Read replicas are for scaling reads, not DR with RPO of less than 1 second.
@@ -1017,7 +1017,7 @@ Why these are the correct answers:
 
 B. Configure the security group for the EC2 instances to only allow traffic that comes from the security group for the ALB.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Route table entries control routing, not security.
 - [ ] C. Moving instances to a public subnet is less secure.
@@ -1044,7 +1044,7 @@ Why these are the correct answers:
 
 D. Migrate the simulation application to Linux Amazon EC2 instances. Migrate the visualization application to Windows EC2 instances. Configure Amazon FSx for NetApp ONTAP for storage.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Lambda doesn't support NFS or SMB.
 - [ ] B. FSx File Gateway is for on-premises, not this use case.
@@ -1071,7 +1071,7 @@ Why these are the correct answers:
 
 B. Create a report in Cost Explorer and download the report.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Athena requires setup and SQL knowledge.
 - [ ] C. The billing dashboard doesn't provide user-level reports.
@@ -1098,7 +1098,7 @@ Why these are the correct answers:
 
 B. Create an Amazon API Gateway endpoint with an AWS Lambda backend that makes a call to Amazon Simple Email Service (Amazon SES).
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. ECS is overkill for a simple contact form.
 - [ ] C. Lightsail is more expensive than Lambda for this use case.
@@ -1125,7 +1125,7 @@ Why these are the correct answers:
 
 C. Invalidate the CloudFront cache.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. ALB is for dynamic content, not static.
 - [ ] B. ElastiCache is for database caching, not static content.
@@ -1152,7 +1152,7 @@ Why these are the correct answers:
 
 B. Host all three tiers on Amazon EC2 instances. Use Amazon FSx for Windows File Server for file sharing between the tiers.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. FSx File Gateway is for on-premises integration.
 - [ ] C. RDS doesn't support all SQL Server features. EFS is for Linux.
@@ -1179,7 +1179,7 @@ Why these are the correct answers:
 
 C. Create an Amazon Elastic File System (Amazon EFS) file system. Mount the EFS file system on all web servers.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. S3 is object storage, not a file system.
 - [ ] B. CloudFront is for caching, not file sharing.
@@ -1206,7 +1206,7 @@ Why these are the correct answers:
 
 B. Apply an IAM role to the Lambda function. Apply an IAM policy to the role to grant read access to the S3 bucket.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Bucket policies grant access to principals, not Lambda functions directly.
 - [ ] C. Embedding keys in code is highly insecure.
@@ -1233,7 +1233,7 @@ Why these are the correct answers:
 
 C. A mix of On-Demand Instances and Spot Instances
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Dedicated Instances are the most expensive.
 - [ ] B. On-Demand are expensive for sustained use.
@@ -1264,7 +1264,7 @@ Why these are the correct answers:
 A. Signed cookies
 B. Signed URLs
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] C. AWS AppSync is for GraphQL APIs, not content delivery.
 - [ ] D. JWTs are for API authentication, not CloudFront access control.
@@ -1294,7 +1294,7 @@ Why these are the correct answers:
 A. Use Amazon Kinesis Data Streams to stream the data. Use Amazon Kinesis Data Analytics to transform the data. Use Amazon Kinesis Data Firehose to write the data to Amazon S3. Use Amazon Athena to query the transformed data from Amazon S3.
 B. Use Amazon Managed Streaming for Apache Kafka (Amazon MSK) to stream the data. Use AWS Glue to transform the data and to write the data to Amazon S3. Use Amazon Athena to query the transformed data from Amazon S3.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] C. DMS is for database migration, not streaming data ingestion. EMR is for big data processing, not simple transformations.
 - [ ] D. RDS query editor is for RDS databases, not S3 data.
@@ -1321,7 +1321,7 @@ Why these are the correct answers:
 
 D. Use AWS Storage Gateway and configure a stored volume gateway. Run the Storage Gateway software appliance on premises and map the gateway storage volumes to on-premises storage. Mount the gateway storage volumes to provide local access to the data.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Snowball is for large data transfers, not ongoing backups with local access.
 - [ ] B. Snowball Edge is for edge computing, not primary backup storage.
@@ -1348,7 +1348,7 @@ Why these are the correct answers:
 
 B. Set up a gateway VPC endpoint for Amazon S3 in the VPC.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Route 53 is for DNS, not network traffic.
 - [ ] C. NAT gateway uses the internet.
@@ -1375,7 +1375,7 @@ Why these are the correct answers:
 
 B. Store the data in an Amazon S3 bucket. Process and transform the data by using S3 Object Lambda before returning the data to the requesting application.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Proxy application adds complexity.
 - [ ] C. Creating and managing multiple S3 buckets adds overhead.
@@ -1402,7 +1402,7 @@ Why these are the correct answers:
 
 D. $10.0.1.0/24$
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. /32 is too small.
 - [ ] B. Overlapping CIDR.
@@ -1429,7 +1429,7 @@ Why these are the correct answers:
 
 B. Create an EC2 Auto Scaling group. Select the existing ALB as the load balancer and the existing target group as the target group. Set a target tracking scaling policy that is based on the ASGAverageCPUUtilization metric. Set the minimum instances to 2, the desired capacity to 3, the maximum instances to 6, and the target value to 50%. Add the EC2 instances to the Auto Scaling group.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Lambda is for serverless, not scaling EC2.
 - [ ] C. Missing target tracking for automation.
@@ -1456,7 +1456,7 @@ Why these are the correct answers:
 
 C. Provision a subnet in each Availability Zone. Configure the Auto Scaling group to distribute the EC2 instances across both Availability Zones. Configure the DB instance for Multi-AZ deployment.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. RDS needs Multi-AZ for HA, not just connections.
 - [ ] B. Subnets cannot span AZs.
@@ -1483,14 +1483,43 @@ Why these are the correct answers:
 
 B. Create an Amazon S3 bucket to store the raw data. Create an Amazon FSx for Lustre file system that uses persistent SSD storage. Select the option to import data from and export data to Amazon S3. Mount the file system on the EC2 instances.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. FSx for ONTAP may not provide the required throughput.
 - [ ] C. HDD storage does not meet the latency requirement.
 - [ ] D. FSx for ONTAP with NONE tiering is not cost-effective.
 </details>
 
+<details>
+  <summary>Question 300</summary>
 
+A company needs to migrate a legacy application from an on-premises data center to the AWS Cloud because of hardware capacity constraints. The application runs 24 hours a day, 7 days a week. The application's database storage continues to grow over time. What should a solutions architect do to meet these requirements MOST cost-effectively?
+
+- [ ] A. Migrate the application layer to Amazon EC2 Spot Instances. Migrate the data storage layer to Amazon S3.
+- [ ] B. Migrate the application layer to Amazon EC2 Reserved Instances. Migrate the data storage layer to Amazon RDS On-Demand Instances.
+- [ ] C. Migrate the application layer to Amazon EC2 Reserved Instances. Migrate the data storage layer to Amazon Aurora Reserved Instances.
+- [ ] D. Migrate the application layer to Amazon EC2 On-Demand Instances. Migrate the data storage layer to Amazon RDS Reserved Instances.
+
+</details>
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Migrate the application layer to Amazon EC2 Reserved Instances. Migrate the data storage layer to Amazon Aurora Reserved Instances.
+
+Why these are the correct answers:
+
+C. Migrate the application layer to Amazon EC2 Reserved Instances. Migrate the data storage layer to Amazon Aurora Reserved Instances.
+
+- [ ] Amazon EC2 Reserved Instances provide a cost-effective solution for applications with consistent, long-term usage patterns, such as the described 24/7 application, by offering significant discounts compared to On-Demand Instances.
+- [ ] Amazon Aurora Reserved Instances offer cost benefits for database layers with predictable usage, aligning with the application's continuous operation and storage growth, and are more cost-effective than On-Demand Instances for sustained use.
+- [ ] This combination optimizes costs by leveraging Reserved Instances for both the application and database layers, reducing expenses for continuous operation and storage needs.
+
+<hr> Why are the other answers wrong? <hr>
+
+- [ ] A. While EC2 Spot Instances can be cost-effective, they are not suitable for applications requiring continuous availability, as they can be interrupted. Amazon S3 is object storage and not a direct replacement for a database storage layer.
+- [ ] B. EC2 Reserved Instances are a good choice for the application layer, but RDS On-Demand Instances do not offer the same cost savings for continuous database operation as Reserved Instances.
+- [ ] D. EC2 On-Demand Instances are more expensive for continuous use, and while RDS Reserved Instances are cost-effective for the database, the application layer also needs cost optimization.
+</details>
 
 
 
