--- a/251_300.md
+++ b/251_300.md
@@ -23,7 +23,7 @@ B. Create a NAT gateway, and place it in a public subnet. Configure the private 
 -   [ ] The private subnet's route table directs outbound traffic to the NAT gateway.
 -   [ ] This solution enables the EC2 instance to download updates securely.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. An internet gateway allows public subnets to access the internet, but not private subnets.
 -   [ ] C. A NAT instance requires more management than a NAT gateway. Placing it in the same subnet is incorrect.
@@ -57,7 +57,7 @@ A. Amazon Elastic File System (Amazon EFS)
 -   [ ] It supports concurrent access from multiple EC2 instances.
 -   [ ] EFS is designed with built-in redundancy and scalability.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] B. Amazon EBS is block storage and can only be attached to a single EC2 instance at a time.
 -   [ ] C. Amazon S3 Glacier Deep Archive is for long-term archival, not concurrent access.
@@ -96,7 +96,7 @@ C. Deleting Amazon EC2 instances
 -   [ ] Policy 2 denies "ds:Delete\*" actions.
 -   [ ] Deny statements override allow statements, but the cloud engineer is still allowed to delete EC2 instances.
 
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. The engineer can't delete IAM users because it's not in Policy 1.
 -   [ ] B. "ds:Delete\*" denies deleting directories.
@@ -130,7 +130,7 @@ B. Create security group rules using the security group ID as the source or dest
 -   [ ] Security groups can reference other security groups, applying least privilege.
 -   [ ] This allows traffic only from instances in the specified security group.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. Instance IDs are dynamic and not practical for security group rules.
 -   [ ] C. VPC CIDR blocks are too broad and violate least privilege.
@@ -163,7 +163,7 @@ D. Store the order in the database. Send a message that includes the order numbe
 -   [ ] SQS FIFO queues ensure messages are processed exactly once and in order.
 -   [ ] This prevents duplicate order creation by processing each order only once.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. Kinesis Data Firehose is for streaming data to destinations, not for ensuring single processing.
 -   [ ] B. CloudTrail is for API call logging, not for workflow management.
@@ -201,7 +201,7 @@ D. Enable MFA Delete on the bucket.
 
 -   [ ] MFA Delete requires multi-factor authentication for deletion, preventing accidental deletes.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. Read-only ACL prevents users from modifying and uploading documents.
 -   [ ] C. IAM policies control access but do not prevent accidental deletion.
@@ -235,7 +235,7 @@ A. Use an Amazon CloudWatch metric stream to send the EC2 Auto Scaling status da
 -   [ ] Kinesis Data Firehose efficiently delivers data to S3.
 -   [ ] This is a serverless solution.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] B. Launching an EMR cluster is not serverless and adds overhead.
 -   [ ] C. Lambda on a schedule is not real-time.
@@ -269,7 +269,7 @@ D. Create an AWS Glue extract, transform, and load (ETL) job to convert the .csv
 -   [ ] Lambda functions can trigger the ETL job on S3 PUT events.
 -   [ ] This solution is efficient and managed.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. Lambda functions may have limitations with large files and complex transformations.
 -   [ ] B. Spark jobs require more setup and management.
@@ -303,7 +303,7 @@ A. Create a backup vault in AWS Backup to retain RDS backups. Create a new backu
 -   [ ] Backup plans automate backup schedules and retention.
 -   [ ] This solution meets the requirements for consistent and restorable backups.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] B. RDS snapshots are point-in-time and not as flexible as AWS Backup. DLM is for EBS volumes, not RDS.
 -   [ ] C. CloudWatch Logs are for log data, not database backups.
@@ -336,7 +336,7 @@ D. Join the file system to the Active Directory to restrict access.
 -   [ ] Joining the file system to the Active Directory preserves existing permissions.
 -   [ ] This allows on-premises Active Directory groups to control access.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. AD Connector connects to AD but doesn't directly enforce permissions. Mapping to IAM groups is incorrect.
 -   [ ] B. Tags are for metadata, not access control. Mapping to IAM groups is incorrect.
@@ -375,7 +375,7 @@ C. Configure a Lambda@Edge function to send specific objects to users based on t
 
 -   [ ] Lambda@Edge allows customization of content delivery based on headers like User-Agent.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] B. Network Load Balancers do not support host headers.
 -   [ ] D. Global Accelerator is for performance, not content versioning. NLBs don't support host-based routing.
@@ -411,7 +411,7 @@ A. Create a peering connection between the VPCs. Add a route table entry for the
 -   [ ] Route table entries enable traffic flow.
 -   [ ] Security groups control access to ElastiCache.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] B. Transit VPC is more complex and expensive for only two VPCs.
 -   [ ] C. Security groups of ElastiCache, not peering, control access to ElastiCache.
@@ -450,7 +450,7 @@ D. Deploy an Amazon Elastic Container Service (Amazon ECS) service with a Fargat
 -   [ ] Fargate removes the need to manage underlying infrastructure.
 -   [ ] Specifying at least two tasks ensures high availability.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] B. Managing the Kubernetes control plane adds operational overhead.
 -   [ ] C. EC2 launch type requires managing EC2 instances.
@@ -483,7 +483,7 @@ D. Create an Application Load Balancer (ALB) with a health check in front of the
 -   [ ] ALB health checks ensure traffic is routed only to healthy instances.
 -   [ ] Route 53 directs traffic to the ALB.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. Simple routing does not provide health checks.
 -   [ ] B. Failover routing is for disaster recovery, not load balancing.
@@ -517,7 +517,7 @@ C. Configure a public Application Load Balancer (ALB) with multiple redundant Am
 -   [ ] ALB distributes traffic to EC2 instances.
 -   [ ] Private subnets secure EC2 instances.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. EC2 instances in public subnets are less secure.
 -   [ ] B. CloudFront needs a public endpoint like an ALB, not EC2 instances directly. EC2 instances in private subnets can't be directly accessed from the internet.
@@ -550,7 +550,7 @@ A. Configure an accelerator in AWS Global Accelerator. Add a listener for the po
 -   [ ] Global Accelerator improves performance by routing traffic to the nearest healthy endpoint.
 -   [ ] It monitors application health and redirects traffic away from unhealthy endpoints.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] B. CloudFront is for caching content, not for real-time traffic routing based on health.
 -   [ ] C. CloudFront with S3 is for static content, not dynamic application traffic.
@@ -584,7 +584,7 @@ D. Create an Amazon Kinesis Data Firehose delivery stream to store the data in A
 -   [ ] Kinesis Data Analytics can analyze data in near-real time.
 -   [ ] This is a managed solution with minimal overhead.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. Kinesis Data Streams and Lambda add complexity.
 -   [ ] B. EMR clusters add operational overhead.
@@ -617,7 +617,7 @@ A. Use Amazon ElastiCache in front of the database.
 -   [ ] ElastiCache can cache frequently read data, reducing database load.
 -   [ ] This improves read performance with minimal changes to the application.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] B. RDS Proxy is for connection management, not caching.
 -   [ ] C. Migrating to Lambda requires significant application changes.
@@ -650,7 +650,7 @@ C. Create a read replica of the primary database and have the business analysts 
 -   [ ] Read replicas offload read queries from the primary database.
 -   [ ] This improves performance with minimal application changes.
    
-<hr> Why are the other answers wrong? <hr>
+Why are the other answers wrong?
 
 -   [ ] A. DynamoDB is not suitable for complex SQL queries.
 -   [ ] B. ElastiCache is for caching, not for running analytical queries.
